--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.ts",
   "type": "commonjs",
-
   "scripts": {
+    "dev": "nodemon dist/server.js",
     "start": "ts-node src/server.ts",
     "watch": "tsc-watch --esModuleInterop src/server.ts --outDir ./dist --onSuccess \"node ./dist/server.js\"",
     "test": "jasmine-ts",
@@ -18,7 +18,9 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "node-pg-migrate": "^7.8.0",
+    "nodemon": "^3.1.9",
     "pg": "^8.13.1",
     "pg-pool": "^3.7.0",
     "supertest": "^7.0.0"
